fixed empty item folder auto deletion with invisible list item

--- a/src/container/container.styles.css
+++ b/src/container/container.styles.css
@@ -9,7 +9,7 @@
 .s-out-pic-container{
     position: absolute;
     width: 100%;
-    top: -5%;
+    top: -18px;
     display: flex;
     align-items: center;
     justify-content: right;
