--- a/src/shopping-list/shopping-list.styles.css
+++ b/src/shopping-list/shopping-list.styles.css
@@ -10,14 +10,14 @@ ul li{
     font-size: 20px;
      background-color: #fffdf8;
      box-shadow: 0px 1px 4px rgba(0,0,0,0.2);
-     padding: 15px;
+     /* padding: 15px; */
      border-radius: 8px;
      flex-grow: 1;
      text-align: center;
      color: #432000;
      position: relative;
      transition:  0.25s ease;
-     max-width: 100%;
+     /* max-width: 100%; */
      word-wrap: break-word;
      word-break:break-word;
 }
